Add navigation, refactoring

--- a/app/src/main/res/layout/joystick_fragment.xml
+++ b/app/src/main/res/layout/joystick_fragment.xml
@@ -25,6 +25,7 @@
         android:layout_below="@id/list_title"
         android:layout_above="@id/joystick"
         app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        android:padding="10dp"
         >
     </androidx.recyclerview.widget.RecyclerView>
 
