--- a/app/src/main/res/layout/scan_new_devices_fragment.xml
+++ b/app/src/main/res/layout/scan_new_devices_fragment.xml
@@ -36,19 +36,8 @@
         android:layout_width="match_parent"
         android:layout_height="0dp"
         android:layout_below="@id/list_title"
-        android:layout_above="@id/btn_back">
+        android:layout_alignParentBottom="true">
     </ListView>
-
-    <Button
-        android:layout_margin="20dp"
-        android:id="@+id/btn_back"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:textAllCaps="false"
-        android:text="@string/stop_search_and_back">
-    </Button>
 
 
 
