--- a/app/src/main/res/menu/bottom_menu.xml
+++ b/app/src/main/res/menu/bottom_menu.xml
@@ -9,6 +9,10 @@
         android:icon="@drawable/round_search_24"
         android:title="" />
     <item
+        android:id="@+id/menu_item_terminal"
+        android:icon="@drawable/round_terminal_24"
+        android:title="" />
+    <item
         android:id="@+id/menu_item_settings"
         android:icon="@drawable/round_settings_24"
         android:title="" />
